kubernetes/catalog/audiobookshelf/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/advplyr/docker-templates/master/audiobookshelf.xml
# Category: MediaApp-Books, MediaServer-Books, MediaApp-Other, MediaServer-Other
# Stars: 203 | Downloads: 4841118
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf
          # No environment variables defined
          ports:
            - containerPort: 80
              protocol: TCP
              name: web-ui-port
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: tmp-audiobooks
              mountPath: "/audiobooks"
            - name: audiobookshelf-data-0
              mountPath: "/config"
            - name: audiobookshelf-data-1
              mountPath: "/metadata"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: tmp-audiobooks
        emptyDir:
      - name: audiobookshelf-data-0
        persistentVolumeClaim:
          claimName: audiobookshelf-data-0
      - name: audiobookshelf-data-1
        persistentVolumeClaim:
          claimName: audiobookshelf-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: audiobookshelf
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web-ui-port
  type: ClusterIP
